feat: add support for pre-shared secrets in API token authentication